# arrtype

./: .gitignore  LICENSE  README.md  flake.nix  justfile  pyproject.toml
arrtype/: __init__.py  __main__.py  type_dump.py  type_tree.py
arrtype/memory/: __init__.py  properties.py  types.py
