[tool.poetry]
name = "arrtype"
version = "0.1.1"
description = "A type dumper for pirate101"
authors = ["StarrFox <starrfox6312@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/wizspoil/arrtype"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.2.1"
memobj = "^0.14.1"
iced-x86 = "^1.21.0"

[tool.poetry.scripts]
arrtype = "arrtype.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
